--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
-    <title>React App</title>
+    <title>DanBook</title>
   </head>
   <body>
     <noscript>Você precisa habilitar o javascript para ver esse site.</noscript>
